projects/stream-manager/src/components/header/header.scss
@use 'igniteui-theming' as *;

.sm-header {
	--background: var(--sm-special-black);
	--border-color: var(--sm-border-color);
	
	gap: rem(16px);
}

.sm-header__logo,
.sm-header__info,
.sm-header__actions,
.sm-info-item,
.sm-header__actions-nav {
	display: flex;
	align-items: center;
}

.sm-header__info {
	justify-content: center;
	width: 100%;
}

.sm-header__actions {
	gap: rem(16px);
}

.sm-header__actions-nav {
	gap: inherit;
	
	> * {
		display: inline-flex;
		align-items: center;
		color: var(--ig-gray-900);
		padding: rem(3px);
		
		&:hover,
		&:focus {
			color: var(--ig-primary-300);
		}
		
		&:focus-visible {
			color: var(--ig-gray-900);
			outline: rem(1px) solid var(--sm-outline-color);
		}
	}
}

.sm-info-item {
	font-size: rem(14px);
	font-weight: 400;
	gap: rem(2px);
	padding: rem(8px) rem(16px);
	min-width: rem(120px);
}

.sm-info-item__label {
	color: var(--ig-gray-300);
}

.sm-info-item__value {
	color: var(--ig-gray-900);
	padding-inline: rem(8px);
}

.sm-info-item__value--progress {
	--track-size: #{rem(4px)};
	--track-border-radius: 0;
	--track-color: #{var(--ig-gray-700)};
	
	min-width: rem(80px);
	
}

.sm-header__logo {
	text-decoration: none;
	gap: rem(10px);
	
	&:focus-visible {
		outline: rem(1px) solid var(--sm-outline-color);
	}
}

.sm-header__logomark {
	width: rem(24px);
	height: rem(24px);
	fill: var(--ig-secondary-900);
}

.sm-header__logo-text {
	color: var(--ig-gray-900);
	font-size: rem(14px);
	text-transform: uppercase;
	font-weight: 700;
}

